--- a/archives.html
+++ b/archives.html
@@ -39,7 +39,7 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="sun-rongyang.github.io"/>
-<meta property="og:image" content="/images/avatar.gif">
+<meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog &ndash;     Archives
 </title>
@@ -49,7 +49,7 @@
   <aside>
     <div>
       <a href="sun-rongyang.github.io">
-        <img src="/images/avatar.gif" alt="Sun Rongyang" title="Sun Rongyang">
+        <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
       <h1><a href="sun-rongyang.github.io">Sun Rongyang</a></h1>
 
@@ -106,7 +106,7 @@
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
   "url" : "sun-rongyang.github.io",
-  "image": "/images/avatar.gif",
+  "image": "/images/avatar.jpg",
   "description": ""
 }
 </script>
