--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
   </header>
   <div>
     <dl>
+      <dt>Sun 18 February 2018</dt>
+      <dd><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html">Build Your Own HPC Cluster: (1) Hardware Construction</a></dd>
       <dt>Sat 17 February 2018</dt>
       <dd><a href="https://sun-rongyang.github.io/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></dd>
     </dl>
