--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
 
 <article>
   <header>
+    <h2><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">Build Your Own HPC Cluster: (1) Hardware Construction</a></h2>
+    <p>
+          Posted on Sun 18 February 2018 in <a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <h2>Introduction</h2>
+<p>High performance computing (HPC) Linux cluster is a powerful tool for scientific research. If you have a research group, it is very convenient to collect your computing resource by building a HPC cluster. In this <code>Build Your Own HPC Cluster</code> series, I will introduce how to construct your own …</p>
+      <br>
+      <a class="btn" href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://sun-rongyang.github.io/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html#use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></h2>
     <p>
           Posted on Sat 17 February 2018 in <a href="https://sun-rongyang.github.io/category/unixlinux.html">Unix/Linux</a>
