--- a/index.html
+++ b/index.html
@@ -81,6 +81,48 @@
 
 <article>
   <header>
+    <h2><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">Build Your Own HPC Cluster: (2) Configure Linux on Main Node</a></h2>
+    <p>
+          Posted on Sun 18 February 2018 in <a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <h2>Install CentOS 7 on the main node</h2>
+<p>Installation of CentOS 7 is very straightforward. What I want to consider here is something need be noticed. For the hard disk partitioning, your plan should seems like:</p>
+<table>
+<thead>
+<tr>
+<th align="left">Partition</th>
+<th align="left">FileSystem</th>
+<th align="left">Note</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left">Swap</td>
+<td align="left">Swap</td>
+<td align="left">Memory * (1.0~2.0)</td>
+</tr>
+<tr>
+<td align="left">/boot</td>
+<td align="left">xfs</td>
+<td align="left"></td>
+</tr>
+<tr>
+<td align="left">/tmp</td>
+<td align="left">xfs</td>
+<td align="left">Not …</td></tr></tbody></table>
+      <br>
+      <a class="btn" href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">Build Your Own HPC Cluster: (1) Hardware Construction</a></h2>
     <p>
           Posted on Sun 18 February 2018 in <a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a>
