--- a/categories.html
+++ b/categories.html
@@ -10,13 +10,12 @@
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/pygments/solarized-dark.min.css">
-  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/solarized-dark.min.css">
+  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
 
 
-    <link href="https://sun-rongyang.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sun Rongyang's Blog Atom">
 
 
 
@@ -38,7 +37,7 @@
 <meta property="og:title" content="Sun Rongyang's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://sun-rongyang.github.io"/>
+<meta property="og:url" content="http://localhost:8000"/>
 <meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog &ndash;     Categories
@@ -48,10 +47,10 @@
 <body>
   <aside>
     <div>
-      <a href="https://sun-rongyang.github.io">
+      <a href="http://localhost:8000">
         <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
-      <h1><a href="https://sun-rongyang.github.io">Sun Rongyang</a></h1>
+      <h1><a href="http://localhost:8000">Sun Rongyang</a></h1>
 
 
 
@@ -66,15 +65,13 @@
   <main>
 
     <nav>
-      <a href="https://sun-rongyang.github.io">    Home
+      <a href="http://localhost:8000">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
-      <a href="https://sun-rongyang.github.io/feeds/all.atom.xml">    Atom
-</a>
 
     </nav>
 
@@ -85,8 +82,9 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a> (2)</li>
-      <li><a href="https://sun-rongyang.github.io/category/unixlinux.html">Unix/Linux</a> (1)</li>
+      <li><a href="http://localhost:8000/category/hpc.html">HPC</a> (2)</li>
+      <li><a href="http://localhost:8000/category/research.html">Research</a> (1)</li>
+      <li><a href="http://localhost:8000/category/unixlinux.html">Unix/Linux</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -105,7 +103,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
-  "url" : "https://sun-rongyang.github.io",
+  "url" : "http://localhost:8000",
   "image": "/images/avatar.jpg",
   "description": ""
 }
