--- a/archives.html
+++ b/archives.html
@@ -10,12 +10,13 @@
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/solarized-dark.min.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/pygments/solarized-dark.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+    <link href="https://sun-rongyang.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sun Rongyang's Blog Atom">
 
 
 
@@ -37,7 +38,7 @@
 <meta property="og:title" content="Sun Rongyang's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://localhost:8000"/>
+<meta property="og:url" content="https://sun-rongyang.github.io"/>
 <meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog &ndash;     Archives
@@ -47,10 +48,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://localhost:8000">
+      <a href="https://sun-rongyang.github.io">
         <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
-      <h1><a href="http://localhost:8000">Sun Rongyang</a></h1>
+      <h1><a href="https://sun-rongyang.github.io">Sun Rongyang</a></h1>
 
 
 
@@ -65,13 +66,15 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000">    Home
+      <a href="https://sun-rongyang.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
+      <a href="https://sun-rongyang.github.io/feeds/all.atom.xml">    Atom
+</a>
 
     </nav>
 
@@ -83,13 +86,13 @@
   <div>
     <dl>
       <dt>Wed 18 April 2018</dt>
-      <dd><a href="http://localhost:8000/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html">Recent DMRG Study for Finite Doped t-J Ladder</a></dd>
+      <dd><a href="https://sun-rongyang.github.io/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html">Recent DMRG Study for Finite Doped t-J Ladder</a></dd>
       <dt>Sun 18 February 2018</dt>
-      <dd><a href="http://localhost:8000/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html">Build Your Own HPC Cluster: (2) Configure Linux on Main Node</a></dd>
+      <dd><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html">Build Your Own HPC Cluster: (2) Configure Linux on Main Node</a></dd>
       <dt>Sun 18 February 2018</dt>
-      <dd><a href="http://localhost:8000/2018/build-your-own-hpc-cluster-1-hardware-construction.html">Build Your Own HPC Cluster: (1) Hardware Construction</a></dd>
+      <dd><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html">Build Your Own HPC Cluster: (1) Hardware Construction</a></dd>
       <dt>Sat 17 February 2018</dt>
-      <dd><a href="http://localhost:8000/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></dd>
+      <dd><a href="https://sun-rongyang.github.io/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></dd>
     </dl>
   </div>
 </article>
@@ -108,7 +111,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
-  "url" : "http://localhost:8000",
+  "url" : "https://sun-rongyang.github.io",
   "image": "/images/avatar.jpg",
   "description": ""
 }
