--- a/tags.html
+++ b/tags.html
@@ -10,12 +10,13 @@
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/solarized-dark.min.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/pygments/solarized-dark.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+    <link href="https://sun-rongyang.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sun Rongyang's Blog Atom">
 
 
 
@@ -37,7 +38,7 @@
 <meta property="og:title" content="Sun Rongyang's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://localhost:8000"/>
+<meta property="og:url" content="https://sun-rongyang.github.io"/>
 <meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog &ndash;     Tags
@@ -47,10 +48,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://localhost:8000">
+      <a href="https://sun-rongyang.github.io">
         <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
-      <h1><a href="http://localhost:8000">Sun Rongyang</a></h1>
+      <h1><a href="https://sun-rongyang.github.io">Sun Rongyang</a></h1>
 
 
 
@@ -65,13 +66,15 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000">    Home
+      <a href="https://sun-rongyang.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
+      <a href="https://sun-rongyang.github.io/feeds/all.atom.xml">    Atom
+</a>
 
     </nav>
 
@@ -81,17 +84,17 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="http://localhost:8000/tag/cluster.html">cluster</a> (2)</li>
-          <li><a href="http://localhost:8000/tag/dmrg.html">DMRG</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/group-meeting.html">group-meeting</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/hardware.html">hardware</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/hpc.html">HPC</a> (2)</li>
-          <li><a href="http://localhost:8000/tag/linux.html">Linux</a> (3)</li>
-          <li><a href="http://localhost:8000/tag/mac.html">Mac</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/osx.html">OSX</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/physics.html">physics</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/research.html">research</a> (1)</li>
-          <li><a href="http://localhost:8000/tag/vm.html">VM</a> (1)</li>
+    <ul class="list">          <li><a href="https://sun-rongyang.github.io/tag/cluster.html">cluster</a> (2)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/dmrg.html">DMRG</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/group-meeting.html">group-meeting</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/hardware.html">hardware</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/hpc.html">HPC</a> (2)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/linux.html">Linux</a> (3)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/mac.html">Mac</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/osx.html">OSX</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/physics.html">physics</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/research.html">research</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/vm.html">VM</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -110,7 +113,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
-  "url" : "http://localhost:8000",
+  "url" : "https://sun-rongyang.github.io",
   "image": "/images/avatar.jpg",
   "description": ""
 }
