--- a/authors.html
+++ b/authors.html
@@ -10,12 +10,13 @@
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/solarized-dark.min.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/pygments/solarized-dark.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+    <link href="https://sun-rongyang.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sun Rongyang's Blog Atom">
 
 
 
@@ -37,7 +38,7 @@
 <meta property="og:title" content="Sun Rongyang's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://localhost:8000"/>
+<meta property="og:url" content="https://sun-rongyang.github.io"/>
 <meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog &ndash;     Authors
@@ -47,10 +48,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://localhost:8000">
+      <a href="https://sun-rongyang.github.io">
         <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
-      <h1><a href="http://localhost:8000">Sun Rongyang</a></h1>
+      <h1><a href="https://sun-rongyang.github.io">Sun Rongyang</a></h1>
 
 
 
@@ -65,13 +66,15 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000">    Home
+      <a href="https://sun-rongyang.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
+      <a href="https://sun-rongyang.github.io/feeds/all.atom.xml">    Atom
+</a>
 
     </nav>
 
@@ -82,7 +85,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://localhost:8000/author/sun-rongyang.html">Sun Rongyang</a> (4)</li>
+      <li><a href="https://sun-rongyang.github.io/author/sun-rongyang.html">Sun Rongyang</a> (4)</li>
     </ul>
   </div>
 </article>
@@ -101,7 +104,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
-  "url" : "http://localhost:8000",
+  "url" : "https://sun-rongyang.github.io",
   "image": "/images/avatar.jpg",
   "description": ""
 }
