--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/solarized-dark.min.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/pygments/solarized-dark.min.css">
+  <link rel="stylesheet" type="text/css" href="https://sun-rongyang.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+    <link href="https://sun-rongyang.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Sun Rongyang's Blog Atom">
 
 
 
@@ -37,7 +38,7 @@
 <meta property="og:title" content="Sun Rongyang's Blog"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://localhost:8000"/>
+<meta property="og:url" content="https://sun-rongyang.github.io"/>
 <meta property="og:image" content="/images/avatar.jpg">
 
   <title>Sun Rongyang's Blog</title>
@@ -46,10 +47,10 @@
 <body>
   <aside>
     <div>
-      <a href="http://localhost:8000">
+      <a href="https://sun-rongyang.github.io">
         <img src="/images/avatar.jpg" alt="Sun Rongyang" title="Sun Rongyang">
       </a>
-      <h1><a href="http://localhost:8000">Sun Rongyang</a></h1>
+      <h1><a href="https://sun-rongyang.github.io">Sun Rongyang</a></h1>
 
 
 
@@ -64,13 +65,15 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000">    Home
+      <a href="https://sun-rongyang.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
+      <a href="https://sun-rongyang.github.io/feeds/all.atom.xml">    Atom
+</a>
 
     </nav>
 
@@ -78,9 +81,9 @@
 
 <article>
   <header>
-    <h2><a href="http://localhost:8000/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html#recent-dmrg-study-for-finite-doped-t-j-ladder">Recent DMRG Study for Finite Doped t-J Ladder</a></h2>
+    <h2><a href="https://sun-rongyang.github.io/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html#recent-dmrg-study-for-finite-doped-t-j-ladder">Recent DMRG Study for Finite Doped t-J Ladder</a></h2>
     <p>
-          Posted on Wed 18 April 2018 in <a href="http://localhost:8000/category/research.html">Research</a>
+          Posted on Wed 18 April 2018 in <a href="https://sun-rongyang.github.io/category/research.html">Research</a>
 
 
 
@@ -88,18 +91,18 @@
   </header>
   <div>
       <p>In this post, I attach the slides which collects the main simulation results in two recent DMRG papers <a href="https://arxiv.org/abs/1804.00670">1804.00670</a> and <a href="https://arxiv.org/abs/1803.11342">1803.11342</a>. I show it in the April 17 group meeting.</p>
-<iframe src="http://localhost:8000/2018/pdf/recent-DMRG-study-for-finite-doped-tJ-ladder.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
+<iframe src="https://sun-rongyang.github.io/2018/pdf/recent-DMRG-study-for-finite-doped-tJ-ladder.pdf" style="width:100%; height:600px;" frameborder="0"></iframe>
       <br>
-      <a class="btn" href="http://localhost:8000/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html#recent-dmrg-study-for-finite-doped-t-j-ladder">    Continue reading
+      <a class="btn" href="https://sun-rongyang.github.io/2018/recent-dmrg-study-for-finite-doped-t-j-ladder.html#recent-dmrg-study-for-finite-doped-t-j-ladder">    Continue reading
 </a>
   </div>
   <hr />
 </article>
 <article>
   <header>
-    <h2><a href="http://localhost:8000/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">Build Your Own HPC Cluster: (2) Configure Linux on Main Node</a></h2>
+    <h2><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">Build Your Own HPC Cluster: (2) Configure Linux on Main Node</a></h2>
     <p>
-          Posted on Sun 18 February 2018 in <a href="http://localhost:8000/category/hpc.html">HPC</a>
+          Posted on Sun 18 February 2018 in <a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a>
 
 
 
@@ -132,16 +135,16 @@
 <td align="left">xfs</td>
 <td align="left">Not …</td></tr></tbody></table>
       <br>
-      <a class="btn" href="http://localhost:8000/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">    Continue reading
+      <a class="btn" href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-2-configure-linux-on-main-node.html#build-your-own-hpc-cluster-2-configure-linux-on-main-node">    Continue reading
 </a>
   </div>
   <hr />
 </article>
 <article>
   <header>
-    <h2><a href="http://localhost:8000/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">Build Your Own HPC Cluster: (1) Hardware Construction</a></h2>
+    <h2><a href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">Build Your Own HPC Cluster: (1) Hardware Construction</a></h2>
     <p>
-          Posted on Sun 18 February 2018 in <a href="http://localhost:8000/category/hpc.html">HPC</a>
+          Posted on Sun 18 February 2018 in <a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a>
 
 
 
@@ -151,16 +154,16 @@
       <h2>Introduction</h2>
 <p>High performance computing (HPC) Linux cluster is a powerful tool for scientific research. If you have a research group, it is very convenient to collect your computing resource by building a HPC cluster. In this <code>Build Your Own HPC Cluster</code> series, I will introduce how to construct your own …</p>
       <br>
-      <a class="btn" href="http://localhost:8000/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">    Continue reading
+      <a class="btn" href="https://sun-rongyang.github.io/2018/build-your-own-hpc-cluster-1-hardware-construction.html#build-your-own-hpc-cluster-1-hardware-construction">    Continue reading
 </a>
   </div>
   <hr />
 </article>
 <article>
   <header>
-    <h2><a href="http://localhost:8000/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html#use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></h2>
+    <h2><a href="https://sun-rongyang.github.io/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html#use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac">Use Virtualbox and CentOS 7 Build a Local Linux Developement Environment on Mac</a></h2>
     <p>
-          Posted on Sat 17 February 2018 in <a href="http://localhost:8000/category/unixlinux.html">Unix/Linux</a>
+          Posted on Sat 17 February 2018 in <a href="https://sun-rongyang.github.io/category/unixlinux.html">Unix/Linux</a>
 
 
 
@@ -170,7 +173,7 @@
       <h2>Introduction</h2>
 <p>Although the Mac OS X operating system is <em>similar</em> as Linux, there are still several differences between them. So it is necessarily to switch to a pure Linux at any time you want if you are a developer for Linux. The most convenient way is ssh to a Linux …</p>
       <br>
-      <a class="btn" href="http://localhost:8000/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html#use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac">    Continue reading
+      <a class="btn" href="https://sun-rongyang.github.io/2018/use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac.html#use-virtualbox-and-centos-7-build-a-local-linux-developement-environment-on-mac">    Continue reading
 </a>
   </div>
 </article>
@@ -193,7 +196,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Sun Rongyang's Blog ",
-  "url" : "http://localhost:8000",
+  "url" : "https://sun-rongyang.github.io",
   "image": "/images/avatar.jpg",
   "description": ""
 }
