--- a/tags.html
+++ b/tags.html
@@ -84,17 +84,24 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://sun-rongyang.github.io/tag/cluster.html">cluster</a> (2)</li>
+    <ul class="list">          <li><a href="https://sun-rongyang.github.io/tag/android.html">Android</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/centos.html">CentOS</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/cluster.html">cluster</a> (2)</li>
           <li><a href="https://sun-rongyang.github.io/tag/dmrg.html">DMRG</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/group-meeting.html">group-meeting</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/hardware.html">hardware</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/hpc.html">HPC</a> (2)</li>
-          <li><a href="https://sun-rongyang.github.io/tag/linux.html">Linux</a> (3)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/ios.html">IOS</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/linux.html">Linux</a> (4)</li>
           <li><a href="https://sun-rongyang.github.io/tag/mac.html">Mac</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/macos.html">MacOS</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/osx.html">OSX</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/physics.html">physics</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/research.html">research</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/v2ray.html">v2ray</a> (1)</li>
           <li><a href="https://sun-rongyang.github.io/tag/vm.html">VM</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/web.html">Web</a> (1)</li>
+          <li><a href="https://sun-rongyang.github.io/tag/windows.html">Windows</a> (1)</li>
     </ul>
   </div>
 </article>
