--- a/categories.html
+++ b/categories.html
@@ -88,6 +88,7 @@
       <li><a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a> (2)</li>
       <li><a href="https://sun-rongyang.github.io/category/research.html">Research</a> (1)</li>
       <li><a href="https://sun-rongyang.github.io/category/unixlinux.html">Unix/Linux</a> (1)</li>
+      <li><a href="https://sun-rongyang.github.io/category/web.html">Web</a> (1)</li>
     </ul>
   </div>
 </article>
