--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
   </header>
   <div>
     <dl>
+      <dt>Sat 09 June 2018</dt>
+      <dd><a href="https://sun-rongyang.github.io/2018/install-googletest-on-mac-osx.html">Install GoogleTest on Mac OSX</a></dd>
       <dt>Mon 30 April 2018</dt>
       <dd><a href="https://sun-rongyang.github.io/2018/v2ray-configuration.html">V2Ray Configuration</a></dd>
       <dt>Wed 18 April 2018</dt>
