--- a/categories.html
+++ b/categories.html
@@ -85,6 +85,7 @@
   </header>
   <div>
     <ul class="list">
+      <li><a href="https://sun-rongyang.github.io/category/c.html">C++</a> (1)</li>
       <li><a href="https://sun-rongyang.github.io/category/hpc.html">HPC</a> (2)</li>
       <li><a href="https://sun-rongyang.github.io/category/research.html">Research</a> (1)</li>
       <li><a href="https://sun-rongyang.github.io/category/unixlinux.html">Unix/Linux</a> (1)</li>
